Resolves variables for call targets if the assignment to the appropriate variable is close by